# LNDC_Bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker_run.sh  run.bat  run.sh  run_debug.sh  test_docker.sh  wsl_run.sh
.github/workflows/: ci.yml  docker-image.yml
scripts/tests/: test_discord.sh  test_fastgpt.sh  test_fastgpt_stream.sh  test_image_gen.sh  test_long_text.sh
src/: lib.rs  main.rs
src/api/: mod.rs  models.rs
src/config/: mod.rs
src/discord/: commands.rs  mod.rs
src/image/: mod.rs
src/session/: mod.rs
