[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2021"
description = "高性能Discord机器人，使用AI回答问题"
authors = ["Bot Developer"]

[dependencies]
# Discord API 库
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
poise = "0.5.5"

# 异步运行时
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "time", "fs"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# 图像处理
image = "0.24"

# 环境变量和配置
dotenv = "0.15"
config = "0.13"

# 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 工具
chrono = "0.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
futures = "0.3"
html-escape = "0.2.13"

# Markdown解析
pulldown-cmark = "0.9.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
