[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2021"
description = "高性能Discord机器人，使用AI回答问题"
authors = ["Bot Developer"]

[dependencies]
# Discord API 库
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
poise = "0.5"

# 异步运行时
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# 图像处理
image = "0.24"

# 环境变量和配置
dotenv = "0.15"
config = "0.13"

# 序列化和反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 工具
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
html-escape = "0.2"

# Markdown解析
pulldown-cmark = "0.9"

[features]
default = []
test_markdown = []

[[bin]]
name = "rust_discord_bot"
path = "src/main.rs"

[[bin]]
name = "test_markdown"
path = "src/bin/test_markdown.rs"
required-features = ["test_markdown"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1            # 适度优化，平衡编译速度与性能
debug = true             # 保留调试信息
incremental = true       # 启用增量编译
codegen-units = 4        # 并行代码生成单元，利用多核
